add dark mode context, fix styles and add translations

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,3 +1,8 @@
 {
-  "profileDetails": "Profile Details"
+  "profileDetails": "Profile Details",
+  "name": "Name",
+  "email": "Email",
+  "role": "Role",
+  "company": "Company",
+  "socials": "Socials"
 }
