--- a/public/locales/en/hero.json
+++ b/public/locales/en/hero.json
@@ -4,6 +4,7 @@
   "aboutMe": "About me",
   "referrals": "Referrals",
   "skills": "Skills",
+  "books": "Books",
   "messageOne": "Hello, my name is",
   "messageTwo": "Pedro Novo",
   "messageThree": "and I'm a",
