--- a/public/locales/es/hero.json
+++ b/public/locales/es/hero.json
@@ -4,6 +4,7 @@
   "aboutMe": "Sobre mí",
   "referrals": "Referencias",
   "skills": "Competencias",
+  "books": "Libros",
   "messageOne": "Hola, mi nombre es",
   "messageTwo": "Pedro Novo",
   "messageThree": "y yo soy",
