--- a/public/locales/pt/hero.json
+++ b/public/locales/pt/hero.json
@@ -4,6 +4,7 @@
   "aboutMe": "Sobre mim",
   "referrals": "Referências",
   "skills": "Competências",
+  "books": "Livros",
   "messageOne": "Olá, o meu nome é",
   "messageTwo": "Pedro Novo",
   "messageThree": "e sou",
